--- a/src/pages/ProcessChain/components/Edge.css
+++ b/src/pages/ProcessChain/components/Edge.css
@@ -5,5 +5,19 @@ g.graph-edge > text{
 
 
 g.graph-edge > path{
-  stroke: #ccc
+  stroke: #ccc;
+  stroke-width:1
+}
+g.graph-edge > path.highlight{
+  stroke: yellow;
+}
+g.graph-edge > path.highlight + text + text,
+g.graph-edge > path.highlight + text{
+  font-size: 0.8em;
+  fill:dimgray;
+}
+
+g#diagram.highlight > g.graph-edge > path:not(.highlight),
+g#diagram.highlight > g.graph-edge > path:not(.highlight) + text{
+  opacity: 0.1
 }
